# kitaru-workshop

./: .gitignore  AGENDA.md  README.md  pyproject.toml
exercises/01_first_flow/: README.md  flow.py
exercises/02_wrap_agent/: BRING_YOUR_OWN.md  README.md  agent.py
exercises/03_replay_overrides/: README.md  replay_demo.py  show_tokens.py
exercises/04_hitl_deploy/: README.md  approval_flow.py
exercises/05_fanout/: README.md  persona_panel.py
exercises/06_chatbot/: README.md  chatbot.py  deploy.sh  drive_local.py  history_artifacts.py  streaming_demo.py  ui.py  watch_stream.py
exercises/07_replay_factory/: README.md  cases.jsonl  factory.py
instructor/: EVALS_PRIMER.md  SPEAKER_NOTES.md  VERIFY_CHECKLIST.md
prework/: PREWORK.md
slides/: slides.md
team_mapping/: MAPPING_WORKSHEET.md
