[project]
name = "kitaru-workshop"
version = "0.1.0"
description = "Agents That Earn Production — a hands-on workshop on Kitaru, ZenML's open runtime for Python agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kitaru[local,pydantic-ai]>=0.16.0",
    "openai>=1.0",
    "pip>=26.1.2",
]

[project.optional-dependencies]
deploy = [
    "aws-profile-manager>=0.7.3",
    "boto3>=1.43.0",
    "kubernetes>=21.7,<26",
    "s3fs>2022.3.0,!=2025.3.1",
    "sagemaker>=3.13.1",
]

# Dependency-only project (the workshop isn't a Python package) — `uv sync`
# just provisions the pinned environment from the lockfile.
[tool.uv]
package = false
